--- a/index.html
+++ b/index.html
@@ -1414,6 +1414,112 @@
 			</div>
 		</div>
 	</div>
+	<div class="desktop-menu" id="desktop-menu">
+		<div class="desktop-menu__container">
+			<div class="desktop-menu__wrap">
+				<div class="desktop-menu__content">
+					<button class="cancel" onclick="toggleNav()" aria-label="button1">
+						<svg width="41" height="41" viewBox="0 0 41 41" fill="none"
+							xmlns="http://www.w3.org/2000/svg">
+							<path fill-rule="evenodd" clip-rule="evenodd"
+								d="M9.19242 29.6983L29.6985 9.19223L31.1127 10.6064L10.6066 31.1125L9.19242 29.6983Z"
+								fill="white" />
+							<path fill-rule="evenodd" clip-rule="evenodd"
+								d="M10.6066 9.89959L30.4056 29.6986L28.9914 31.1128L9.19241 11.3138L10.6066 9.89959Z"
+								fill="white" />
+						</svg>
+					</button>
+					<div class="desktop-menu__item">
+						<div class="desktop-menu__item__name">
+							Бренды
+						</div>
+						<ul class="desktop-menu__menu">
+							<li>
+								<a href="">XGMA</a>
+							</li>
+							<li>
+								<a href="">Beezone</a>
+							</li>
+							<li>
+								<a href="">Lonking</a>
+							</li>
+							<li>
+								<a href="">Wacker Neuson</a>
+							</li>
+							<li>
+								<a href="">Weidemann</a>
+							</li>
+						</ul>
+					</div>
+					<div class="desctop-menu__item">
+						<div class="desktop-menu__item__name">
+							Вид техники
+						</div>
+						<ul class="desktop-menu__menu">
+							<li>
+								<a href="">Фронтальные погрузчики</a>
+							</li>
+							<li>
+								<a href="">Гусеничные экскаваторы</a>
+							</li>
+							<li>
+								<a href="">Колесные экскаваторы</a>
+							</li>
+							<li>
+								<a href="">Эскаваторы-погрузчики</a>
+							</li>
+							<li>
+								<a href="">Дорожные катки</a>
+							</li>
+							<li>
+								<a href="">Автогрейдеры</a>
+							</li>
+							<li>
+								<a href="">Бульдозеры</a>
+							</li>
+							<li>
+								<a href="">Миниэкскаваторы</a>
+							</li>
+							<li>
+								<a href="">Минипогрузчики</a>
+							</li>
+							<li>
+								<a href="">Телескопические погрузчики</a>
+							</li>
+							<li>
+								<a href="">Грейдеры</a>
+							</li>
+							<li>
+								<a href="">Эскаваторы</a>
+							</li>
+						</ul>
+					</div>
+					<div class="desktop-menu__item">
+						<div class="desktop-menu__item__name">
+							Отрасль техники
+						</div>
+						<ul class="desktop-menu__menu">
+							<li>
+								<a href="">Агротехника</a>
+							</li>
+							<li>
+								<a href="">Горная,карьерная промышленность</a>
+							</li>
+							<li>
+								<a href="">Коммунальные службы</a>
+							</li>
+							<li>
+								<a href="">Лесное хозяйство</a>
+							</li>
+							<li>
+								<a href="">Строительство</a>
+							</li>
+						</ul>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
 	<script src="./js/bundle.js"></script>
 </body>
 
