--- a/product.html
+++ b/product.html
@@ -25,7 +25,8 @@
 								<img src="img/logo.svg" alt="logo">
 							</a>
 							<a href="/catalog.html" class="header__catalog-link">Каталог</a>
-							<button class="header__catalog-burger" aria-label="Кнопка каталога" title="Открыть каталог" onclick="toggleNav()">
+							<button class="header__catalog-burger" aria-label="Кнопка каталога" title="Открыть каталог"
+								onclick="toggleNav()">
 								<svg xmlns="http://www.w3.org/2000/svg" width="28" height="29" viewBox="0 0 28 29"
 									fill="none">
 									<path d="M2 13.5H26V15.5H2V13.5Z" fill="#2D9FD3" />
@@ -1077,22 +1078,13 @@
 								<a href="">Автогрейдеры</a>
 							</li>
 							<li>
-								<a href="">Бульдозеры</a>
+								<a href="">Мини-погрузчики</a>
 							</li>
 							<li>
 								<a href="">Миниэкскаваторы</a>
 							</li>
 							<li>
-								<a href="">Минипогрузчики</a>
-							</li>
-							<li>
 								<a href="">Телескопические погрузчики</a>
-							</li>
-							<li>
-								<a href="">Грейдеры</a>
-							</li>
-							<li>
-								<a href="">Эскаваторы</a>
 							</li>
 						</ul>
 					</div>
@@ -1114,7 +1106,7 @@
 								<a href="">Лесное хозяйство</a>
 							</li>
 							<li>
-								<a href="">Строительство</a>
+								<a href="">Строительство и дорожное строительство</a>
 							</li>
 						</ul>
 					</div>
