--- a/catalog.html
+++ b/catalog.html
@@ -171,6 +171,14 @@
                             </p>
                             <div class="catalog__range" id="catalog__range"></div>
                             <div class="catalog__controls-row">
+                                <select class="catalog__controls-select catalog__controls-select_mobile" id="branches2">
+                                    <option value>Бренд</option>
+                                    <option value="foo">XGMA</option>
+                                    <option value="buz">Beezone</option>
+                                    <option value="buz2">Lonking</option>
+                                    <option value="buz3">Wacker neuson</option>
+                                    <option value="buz4">Weidemann</option>
+                                </select>
                                 <select class="catalog__controls-select" id="techview">
                                     <option value>Вид</option>
                                     <option value="foo">Бульдозеры</option>
@@ -181,6 +189,7 @@
                                     <option value="foo">Агротехника</option>
                                     <option value="buz">Горная карьерная промышленность</option>
                                 </select>
+                                
 
                             </div>
                         </div>
@@ -4947,6 +4956,9 @@
 							</li>
 							<li>
 								<a href="">Телескопические погрузчики</a>
+							</li>
+                            <li>
+								<a href="">Б/У техника</a>
 							</li>
 						</ul>
 					</div>
