--- a/catalog-section.html
+++ b/catalog-section.html
@@ -2470,6 +2470,9 @@
 							<li>
 								<a href="">Телескопические погрузчики</a>
 							</li>
+                            <li>
+								<a href="">Б/У техника</a>
+							</li>
 						</ul>
 					</div>
 					<div class="desktop-menu__item">
