--- a/index.html
+++ b/index.html
@@ -1817,6 +1817,9 @@
 							<li>
 								<a href="">Телескопические погрузчики</a>
 							</li>
+							<li>
+								<a href="">Б/У техника</a>
+							</li>
 						</ul>
 					</div>
 					<div class="desktop-menu__item">
