--- a/lizing.html
+++ b/lizing.html
@@ -258,9 +258,34 @@
                     </section>
                     <section class="product-lizing">
                         <div class="product-lizing__top">
-                            <h2 class="product-lizing__title title-small">
-								Наши партнеры
-							</h2>
+							<div class="product-lizing__top__left">
+								<h2 class="product-lizing__title title-small">
+									Наши партнеры
+								</h2>
+								<ul>
+									<li>
+										<a href="https://texbaza-group.ru/carcade/">
+											CARCADE
+										</a>
+									</li>
+									<li>
+										<a href="https://texbaza-group.ru/evroplan/">
+											Европлан
+										</a>
+									</li>
+									<li>
+										<a href="https://texbaza-group.ru/reso/">
+											РЕСО-Лизинг
+										</a>
+									</li>
+									<li>
+										<a href="https://texbaza-group.ru/interlizing/">
+											ИНТЕРЛИЗИНГ
+										</a>
+									</li>
+								</ul>
+							</div>
+                            
                             <div class="product-lizing__nav">
                                 <button class="product-lizing__nav-prev nav-prev">
                                     <svg width="9" height="15" viewBox="0 0 9 15" fill="none"
@@ -543,6 +568,9 @@
 							</li>
 							<li>
 								<a href="">Телескопические погрузчики</a>
+							</li>
+							<li>
+								<a href="">Б/У техника</a>
 							</li>
 						</ul>
 					</div>
