--- a/product.html
+++ b/product.html
@@ -1086,6 +1086,9 @@
 							<li>
 								<a href="">Телескопические погрузчики</a>
 							</li>
+							<li>
+								<a href="">Б/У техника</a>
+							</li>
 						</ul>
 					</div>
 					<div class="desktop-menu__item">
